# cpp_arcade

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp
games/: Makefile
games/snake/: Makefile  Snake.cpp  Snake.hpp
include/: Color.hpp  Core.hpp  Core.hpp~  IGameLib.hpp  PixelBox.hpp
lib/: Makefile
lib/NCurses/: Makefile  NCursesLib.cpp  NCursesLib.hpp
lib/SDL/: Makefile  SDL.cpp  SDL.hpp
lib/SFML/: Makefile  SFML.cpp  SFML.hpp
src/: Color.cpp  Core.cpp  PixelBox.cpp  TextBox.cpp
